--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3150,6 +3150,73 @@
    "source": [
     "code demo page 128"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = PolynomialFeatures(degree=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_poly = pf.fit_transform(x)\n",
+    "model = LinearRegression()\n",
+    "model.fit(x_poly, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10.16819925],\n",
+       "       [ 5.80504162],\n",
+       "       [ 3.11542041],\n",
+       "       [ 2.0993356 ],\n",
+       "       [ 2.75678721],\n",
+       "       [11.72213805]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_predict = [[300],[400],[500],[600] ,[700], [950]]\n",
+    "y_predict = model.predict(pf.transform(x_predict))\n",
+    "y_predict"
+   ]
   }
  ],
  "metadata": {
